# backend/src/modules/padukuhan/dto/update-padukuhan.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreatePadukuhanDto } from './create-padukuhan.dto';
+
+export class UpdatePadukuhanDto extends PartialType(CreatePadukuhanDto) {}
